[gd_scene load_steps=5 format=3 uid="uid://b5nk1tsswudcm"]

[ext_resource type="Script" path="res://targeting system/targeting_system.gd" id="1_uh1f3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dfo1h"]
size = Vector3(8, 10, 12)

[sub_resource type="BoxShape3D" id="BoxShape3D_ini2b"]
size = Vector3(8, 10, 12)

[sub_resource type="BoxShape3D" id="BoxShape3D_5ry60"]
size = Vector3(2, 10, 12)

[node name="TargetingSystem" type="Node3D"]
script = ExtResource("1_uh1f3")
target_detection_layer_mask = 4

[node name="LeftEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -1)
shape = SubResource("BoxShape3D_dfo1h")

[node name="RightEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -1)
shape = SubResource("BoxShape3D_ini2b")

[node name="CenterEye" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="CenterEye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
shape = SubResource("BoxShape3D_5ry60")

[node name="Eyeline" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
target_position = Vector3(0, 0, -15)
collision_mask = 5
